# procedural

./: CMakeLists.txt
assets/: plugins.cfg  resources.cfg
src/: main.cpp  planet.cpp  planet.h  procedural.cpp  procedural.h  util.h
